// VistaOne Vendor Web Application - Entity Relationship Diagram
// Source: dbdiagram.io
// Visual ERD: https://dbdiagram.io/d/69b893d9fb2db18e3b9568ac

Table users {
 user_id int [pk, increment, note: 'Primary key']
 username varchar(50) [unique, not null]
 email varchar(100) [unique, not null]
 password_hash varchar(255) [not null]
 first_name varchar(50)
 last_name varchar(50)
 phone varchar(20)
 user_type varchar(20) [not null]
 is_active boolean [default: true]
 created_at timestamp [default: `CURRENT_TIMESTAMP`]
 updated_at timestamp [default: `CURRENT_TIMESTAMP`]
 created_by varchar(50)
 modified_by varchar(50)
 Note: 'Stores user account information for customers, vendors, and admins'
}

Table vendors {
 vendor_id int [pk, increment]
 user_id int [not null]
 business_name varchar(100) [not null]
 business_description text
 business_address varchar(255)
 city varchar(50)
 state varchar(50)
 zip_code varchar(10)
 country varchar(50)
 business_phone varchar(20)
 business_email varchar(100)
 tax_id varchar(50)
 is_verified boolean [default: false]
 rating decimal(3,2) [default: 0.00]
 created_at timestamp [default: `CURRENT_TIMESTAMP`]
 updated_at timestamp [default: `CURRENT_TIMESTAMP`]
 created_by varchar(50)
 modified_by varchar(50)
 Note: 'Stores vendor business profile and verification details'
}

Table categories {
 category_id int [pk, increment]
 category_name varchar(100) [not null]
 description text
 parent_category_id int
 created_at timestamp [default: `CURRENT_TIMESTAMP`]
 created_by varchar(50)
 modified_by varchar(50)
 Note: 'Product/Service categories with hierarchical structure'
}

Table products {
 product_id int [pk, increment]
 vendor_id int [not null]
 category_id int
 product_name varchar(200) [not null]
 description text
 price decimal(10,2) [not null]
 quantity_available int [default: 0]
 sku varchar(50) [unique]
 is_active boolean [default: true]
 created_at timestamp [default: `CURRENT_TIMESTAMP`]
 updated_at timestamp [default: `CURRENT_TIMESTAMP`]
 created_by varchar(50)
 modified_by varchar(50)
 Note: 'Product catalog with pricing and inventory'
}

Table orders {
 order_id int [pk, increment]
 customer_id int [not null]
 order_status varchar(20) [not null]
 total_amount decimal(10,2) [not null]
 shipping_address varchar(255)
 city varchar(50)
 state varchar(50)
 zip_code varchar(10)
 country varchar(50)
 created_at timestamp [default: `CURRENT_TIMESTAMP`]
 updated_at timestamp [default: `CURRENT_TIMESTAMP`]
 created_by varchar(50)
 modified_by varchar(50)
 Note: 'Customer orders with shipping information'
}

Table order_items {
 order_item_id int [pk, increment]
 order_id int [not null]
 product_id int [not null]
 quantity int [not null]
 unit_price decimal(10,2) [not null]
 subtotal decimal(10,2) [not null]
 created_at timestamp [default: `CURRENT_TIMESTAMP`]
 created_by varchar(50)
 modified_by varchar(50)
 Note: 'Line items for each order (join table)'
}

Table reviews {
 review_id int [pk, increment]
 product_id int [not null]
 customer_id int [not null]
 rating int [not null]
 review_text text
 is_verified_purchase boolean [default: false]
 created_at timestamp [default: `CURRENT_TIMESTAMP`]
 updated_at timestamp [default: `CURRENT_TIMESTAMP`]
 created_by varchar(50)
 modified_by varchar(50)
 Note: 'Customer reviews and ratings for products'
}

// Relationships
Ref: vendors.user_id > users.user_id // 1:1 - Each vendor has one user account
Ref: products.vendor_id > vendors.vendor_id // 1:N - One vendor has many products
Ref: products.category_id > categories.category_id // N:1 - Many products in one category
Ref: categories.parent_category_id > categories.category_id // Self-ref - Parent/child categories
Ref: orders.customer_id > users.user_id // 1:N - One user has many orders
Ref: order_items.order_id > orders.order_id // 1:N - One order has many items
Ref: order_items.product_id > products.product_id // N:1 - Many items reference one product
Ref: reviews.product_id > products.product_id // 1:N - One product has many reviews
Ref: reviews.customer_id > users.user_id // 1:N - One user has many reviews
